додано новий файл ы змынено головний

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       
     </section>
     <section class="secondscreen">Lorem</section>
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error enim perferendis et animi. Qui velit hic fugit delectus ipsam! Laboriosam hic est voluptas dignissimos impedit ea amet, iusto quisquam eligendi!</p>
 </body>
 </html>
